Re-adding section that has some pre > code elements to analyze the overflow problem on this section

--- a/lecture1-html-zymes/index.html
+++ b/lecture1-html-zymes/index.html
@@ -93,6 +93,32 @@
                 </div>
             </div>
 
+            <!-- Pagrindinės HTML žymės-->
+            <div class="section">
+                <div class="section-header">
+                    <h3 id="section3">Pagrindinės HTML žymės</h3>
+                </div>
+            
+                <div class="theory-text">
+                    <p>Kiekviename, taisyklingam HTML puslapyje/faile PRIVALO būti šios žymės:</p>
+                    <div class="code-div">
+                        <code class="language-html">&#x3C;!DOCTYPE html&#x3E; - yra "speciali" žymė, kuri neturi uždaromosios žymės. Ši žymė yra būtina HTML failo pradžioje, kadangi ši žymė nurodys (naršyklei), jog šis failas yra HTML failas.</code>
+                    </div>
+
+                    <div class="code-div">
+                        <code class="language-html">&#x3C;html&#x3E; &#x3C;/html&#x3E;</code> - <span class="bold-text">html</span> žymė yra pagrindinė viso dokumento žymė, kuri nurodo, jog jos <span class="bold-text">turinyje</span> bus rašomas HTML kodas.
+                    </div>
+
+                    <div class="code-div">
+                        <code class="language-html">&#x3C;head&#x3E; &#x3C;/head&#x3E;</code> - <span class="bold-text">head</span> žymė yra  pagrindinė <span class="bold-text">konfiguracinė</span> žymė. Jos turinyje yra kuriamos kitos žymės, kurios nustato puslapio konfiguracinius parametrus, pvz.: puslapio pavadinimą, teksto koduotę (lotyniškų, lietuviškų, kitokių kalbų palaikymą), papildomų failų (CSS, JS) pridėjimą. Apie konkrečias <code class="language-html">&#x3C;head&#x3E;</code> "vidines" žymes mokinsimės toliau.
+                    </div>
+
+                    <div class="code-div">
+                        <code class="language-html">&#x3C;body&#x3E; &#x3C;/body&#x3E;</code> - <span class="bold-text">body</span> - žymė yra pagrindinė <span class="bold-text">dokumento/puslapio turinio</span> žymė. Body turinyje rašysime visas kitas puslapio turinio žymes. Pavyzdžiui: pastraipa, antraštė, lentelė ir t.t.
+                    </div>
+                </div>
+            </div>
+
         </div>
     </div>
     <div>Icons made by <a href="https://www.freepik.com" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
