Added 'paragraph' section

--- a/lecture1-html-zymes/index.html
+++ b/lecture1-html-zymes/index.html
@@ -175,6 +175,34 @@
                 </div>
             </div>
 
+            <!-- Antraštės žymė -->
+            <div class="section">
+                <div class="section-header">
+                    <h3 id="section5-2">Antraštės žymė</h3>
+                </div>
+
+                <div class="theory-text">
+                    <p>Antraštės yra kelių skirtingų lygių (panašiai kaip ir Word'e antraštės yra skirtingų lygių, viena būtų naudojama skyriams, kita poskyriams ir t.t.)</p>
+                    <p>Panašus principas būtų pritaikomas ir puslapių kūrime: aukščiausio (svarbiausio) lygio antraštę dažniausiai naudotume puslapio tituliniui pavadinimui, antro lygio antraštę tam tikram puslapio skyriaus/sekcijos pavadinimui, trečio lygio antraštę naudotume tos sekcijos poskyriams ir t.t.</p>
+                    <p>Tiesa, griežtų taisyklių kaip ir kur naudoti antraštes nėra, tai labiau būtų tiesiog rekomenduojami nurodymai, tačiau kartais naudotume ir skirtingų lygių antraštes skirtingiems dalykams.</p>
+                    <p>Kaip sukurti antraštes? Antraščių žymės yra:</p>
+                    <p>Pirmo (aukščiausio) lygio antraštės žymės yra: <code class="language-html">&#x3C;h1&#x3E; &#x3C;/h1&#x3E;</code></p>
+                    <p>Antro lygio antraštės žymės yra: <code class="language-html">&#x3C;h2&#x3E; &#x3C;/h2&#x3E;</code></p>
+                    <p>Trečio lygio antraštės žymės yra: <code class="language-html">&#x3C;h3&#x3E; &#x3C;/h3&#x3E;</code></p>
+                    <p>Ketvirto lygio antraštės žymės yra: <code class="language-html">&#x3C;h4&#x3E; &#x3C;/h4&#x3E;</code></p>
+                    <p>Penkto lygio antraštės žymės yra: <code class="language-html">&#x3C;h5&#x3E; &#x3C;/h5&#x3E;</code></p>
+                    <p>Šešto lygio antraštės žymės yra: <code class="language-html">&#x3C;h6&#x3E; &#x3C;/h6&#x3E;</code></p>
+                    <p>Septinto (žemiausio) lygio antraštės žymės yra: <code class="language-html">&#x3C;h7&#x3E; &#x3C;/h7&#x3E;</code></p>
+                    <p>Pavyzdys:</p>
+                    <pre><code class="language-html">&#x3C;h1&#x3E;&#x10C;ia yra puslapio titulinis&#x3C;/h1&#x3E;
+&#x3C;h2&#x3E;&#x10C;ia yra puslapio Naujienos&#x3C;/h2&#x3E;
+&#x3C;h3&#x3E;Puslapis &#x161;iandien buvo atnaujintas!!&#x3C;/h3&#x3E;
+&#x3C;h4&#x3E;Vienas i&#x161; atnaujinim&#x173; pagreitina puslap&#x12F; 40% procent&#x173;&#x3C;/h4&#x3E;</code></pre>
+                    <p>Norint pamatyti pavyzdį vizualiai, spauskite <a href="trecias_pavzdys.html">čia</a></p>
+                    <p>Matome, jog antraščių tekstas yra paryškintas bei kiekvienos antraštės teksto dydis yra atitinkamai pagal jos lygį.</p>
+                </div>
+            </div>
+
         </div>
     </div>
     <div>Icons made by <a href="https://www.freepik.com" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
