Numerized the exercsises. Testing overall connectivity to the project and deployability

--- a/lecture1-html-zymes/index.html
+++ b/lecture1-html-zymes/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="lt">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -211,6 +211,7 @@
 
                 <!-- Pirma užduotis-->
                 <div class="theory-text">
+                    <h4>Pirma užduotis</h4>
                     <ol class="task-list">
                         <li>Pasileiskite Visual Studio Code programą (spauskite ant nuorodos, jeigu jos dar neturite ir norite išsiaiškinti kaip įsirašyti). Susikurkite naują projektą ir jame susikurkite naują HTML failą.</li>
                         <ol>
@@ -362,6 +363,7 @@
                 </div>
 
                 <div class="theory-text">
+                    <h4>Antra užduotis</h4>
                     <ol class="task-list">
                         <li>Susikurkite naują projektą</li>
                     </ol>
