Added more second task's points

--- a/lecture1-html-zymes/index.html
+++ b/lecture1-html-zymes/index.html
@@ -362,10 +362,51 @@
 
                 </div>
 
+                <!-- Antra užduotis-->
                 <div class="theory-text">
                     <h4>Antra užduotis</h4>
                     <ol class="task-list">
-                        <li>Susikurkite naują projektą</li>
+                        <li>Susikurkite naują aplanką pavadinimu "pirmos pamokos antras projektas"</li>
+                        <li>Atsidarykite šį aplanką kaip projektą (taip pat, kaip darėte pirmoje užduotjye)</li>
+                        <li>Susikurkite <span><code class="language-html">"straipsnis.html"</code></span> failą</li>
+                        <li>Susirašykite pagrindines HTML žymes <code class="language-html">(&#x3C;!DOCTYPE html&#x3E;, &#x3C;html&#x3E;, &#x3C;head&#x3E;, &#x3C;body&#x3E;)</code>. Failas turėtų atrodyti taip:</li>
+                        <div class="spoiler">
+                            <div class="spoiler-content">
+                                <pre><code class="language-html">&#x3C;!DOCTYPE html&#x3E;
+&#x3C;html&#x3E;
+    &#x3C;head&#x3E;
+
+    &#x3C;/head&#x3E;
+    &#x3C;body&#x3E;
+        
+    &#x3C;/body&#x3E;
+&#x3C;/html&#x3E;
+                                </code></pre>
+                            </div>
+                            <div class="spoiler-button">
+                                <button></button>
+                            </div>
+                        </div>
+                        <li>Įsirašykite <code class="language-html">&#x3C;title&#x3E; &#x3C;/title&#x3E;</code> žymę į <code class="language-html">&#x3C;head&#x3E;</code> žymės vidų. (Pastaba: kai sakome "į žymės vidų", dažniausiai turime omenyje į žymės <a href="#turinys">turinį</a> arba kitaip sakant į tarpą tarp <a href="#pradineZyme">atidaromosios žymės</a> ir <a href="uzdaromojiZyme">uždaromiosios žymės</a></li>
+                        <li>Į <code class="language-html">&#x3C;title&#x3E;</code> žymės vidų (turinį) įrašykite "Naujienos" (be kabučių)</li>
+                        <div class="spoiler">
+                            <div class="spoiler-content">
+                                <pre><code class="language-html">&#x3C;!DOCTYPE html&#x3E;
+&#x3C;html&#x3E;
+    &#x3C;head&#x3E;
+        &#x3C;title&#x3E;Naujienos&#x3C;/title&#x3E;
+    &#x3C;/head&#x3E;
+    &#x3C;body&#x3E;
+        
+    &#x3C;/body&#x3E;
+&#x3C;/html&#x3E;
+                                </code></pre>
+                            </div>
+                            <div class="spoiler-button">
+                                <button></button>
+                            </div>
+                        </div>
+
                     </ol>
 
                     <div class="spoiler">
