Fixed the unnecessary horizontal scrollbar by removing CSS 'width' parameters from html and body elements

--- a/lecture1-html-zymes/index.html
+++ b/lecture1-html-zymes/index.html
@@ -423,6 +423,25 @@
                 </div>
             </div>
 
+            <!-- Nuorodos žymė -->
+            <div class="section">
+                <div class="section-header">
+                    <h3 id="section7">Nuorodos elementas</h3>
+                </div>
+            
+                <div class="theory-text">
+                    <p>Nuorodos elementas yra žymimas <code class="language-html">a</code> raide. Nuorodos pradinė žymė yra <code class="language-html">&#x3C;a&#x3E;</code>, o uždaromoji žymė <code class="language-html">&#x3C;/a&#x3E;</code>. Tarp žymių, nuorodos elemento turinyje mes rašome nuorodos pavadinimą, t.y. kokį tekstą turėtų atvaizduoti vietoj nuorodos. Dažnai naudojamas "Spauskite čia..." užrašas. </p>
+                    <p>Sukūrus tokį elementą: <code class="language-html">&#x3C;a&#x3E;Spauskite &#x10D;ia...&#x3C;/a&#x3E;</code> mūsų nuoroda dar neveiks, kadangi mes neįvėdėme jokio nuorodos adreso.</p>
+                    <p>Tačiau, mes turinyje jau neturime vietos, kadangi ten yra įvestas nuorodos teksto pavadinimas. Todėl, kiekvienas HTML elementas gali turėti ATRIBUTUS.</p>
+                    <p>Atributai yra rašomi PRADINĖS ŽYMĖS VIDUJE po žymės pavadinimo (bet būtinai prieš daugiau ženklą (&#x3E;)). Rašome atributo pavadinimą, dedame lygybę, po lygybių rašome kabutes ir tarp kabučių įrašome to atributo reikšmę.</p>
+                    <p>Pavyzdžiui: <code class="language-html">&#x3C;zymes_pav atributas=&#x22;reiksme&#x22;&#x3E;  TURINYS &#x3C;zymes_pav&#x3E;</code></p>
+                    <p>Yra globalūs atributai, kuriuos galima naudoti bet kuriam elementui. (pagrindiniai iš globalių elementų, kuriuos naudosime yra <code class="langauge-html">id</code> ir <code class="language-html">class</code></p>
+                    <p>Taip pat yra specifiniai tik tam elementui būdingi atributai.</p>
+                    <p>Pavyzdžiui, nuoroda turi specialų <code class="language-html">href</code> atributą, kuriame ir nusakysime mūsų nuorodos adresą.</p>
+                    <p>Taigi, pilnai</p>
+                </div>
+            </div>
+
         </div>
     </div>
     <div>Icons made by <a href="https://www.freepik.com" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
