--- a/lecture2-attributes-img-a/index.html
+++ b/lecture2-attributes-img-a/index.html
@@ -23,10 +23,10 @@
         <div class="main-content">
             <div class="section">
                 <div class="section-header">
-                    <h3 id="section1">Section headeris</h3>
+                    <h3 id="section1">HTML Atributai</h3>
                 </div>
                 <div class="theory-text">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt, mollitia perferendis illo dolorem vel dolor consectetur expedita sapiente harum voluptas quaerat excepturi tempora nihil velit eligendi officiis nemo laborum atque.</p>
+                    <p>Kiekvienas HTML elementas</p>
                     <ul class="example-list">
                         <li>lore </li>
                         <li>lore</li>
