Added link to project creation page from the lecture page

--- a/java-lecture-class-book/index.html
+++ b/java-lecture-class-book/index.html
@@ -28,7 +28,7 @@
                 <div class="theory-text">
                     <h4>Užduotis:</h4>
                     <ul class="example-list">
-                        <li>Susikurti projektą bei PagrindinePrograma.java failą (klasę) </li>
+                        <li>Susikurti projektą bei PagrindinePrograma.java failą (klasę). Norint sužinoti/prisiminti, kaip tai padaryti, <a href="projekto_kurimas.html">spauskite čia</a> </li>
                         <li>lore</li>
                         <li>lore</li>
                         <li>lore</li>
