Wrote intro, project creation, class creation, class variables, constructors

--- a/java-lecture-class-book/index.html
+++ b/java-lecture-class-book/index.html
@@ -20,6 +20,8 @@
             </ul>
         </div>
 
+    
+
         <div class="main-content">
             <div class="section">
                 <div class="section-header">
@@ -28,10 +30,29 @@
                 <div class="theory-text">
                     <h4>Užduotis:</h4>
                     <ul class="example-list">
+                        <span class="open-image"><img src="../assets/img/img.png" alt="Paveiksliukas rodantis du paveiksliukus, skirtas atidaryti paveiksliuką"><div><img src="../assets/img/java-lecture1/screenshot6.jpg" alt="Kodo foto"></div></span>
+
                         <li>Susikurti projektą bei PagrindinePrograma.java failą (klasę). Norint sužinoti/prisiminti, kaip tai padaryti, <a href="projekto_kurimas.html">spauskite čia</a> </li>
-                        <li>lore</li>
-                        <li>lore</li>
-                        <li>lore</li>
+                        <li>PagrindinePrograma.java susikurkite main metodą (įraškite main ir pasirinkite, jog nereiktų rašyti viso ilgo teksto) <span class="open-image"><img src="../assets/img/img.png" alt="Paveiksliukas rodantis du paveiksliukus, skirtas atidaryti paveiksliuką"><div><img src="../assets/img/java-lecture1/screenshot6.jpg" alt="Kodo foto"></div></span></li>
+                        <li>Susikurkite Knyga.java failą (klasę) <span class="open-image"><img src="../assets/img/img.png" alt="Paveiksliukas rodantis du paveiksliukus, skirtas atidaryti paveiksliuką"><div><img src="../assets/img/java-lecture1/screenshot7.jpg" alt="Kodo foto"></div></span></li>
+                        <li>Joje turėtų būti tokie kintamieji:
+                            <ul>
+                                <li>isbn - knygos identifikacinis kodas sudarytas iš dešimt skaičių, atskirtų trim brūkšneliais. Pvz.: (95-8238-577-4) (iš viso 13 simbolių)</li>
+                                <li>Pavadinimas</li>
+                                <li>Autorius</li>
+                                <li>Leidimo metai</li>
+                                <li>Leidėjas</li>
+                                <li>Šalis</li>
+                                <li>Kaina</li>
+                            </ul>
+                            </li>
+                        <li>isbn darysime String, kadangi skaičiai IR brūkšniukai (simboliai). Pavadinimas String, kadangi tai yra tekstas, Autorius taip pat String, kadangi tai yra tekstas. Leidimo metai int (integer), kadangi metai visada būna sveikas skaičius. Leidėjas String, kadangi tai tekstas (pavadinimas), šalis taip pat String, kadangi tai tekstas. Kaina yra double, kadangi tai skaičius su kableliu. <span class="open-image"><img src="../assets/img/img.png" alt="Paveiksliukas rodantis du paveiksliukus, skirtas atidaryti paveiksliuką"><div><img src="../assets/img/java-lecture1/screenshot8.jpg" alt="Kodo foto"></div></span></li>
+                        <li>Toliau, po kintamųjų (bet prieš klasės uždaromąjį riestinį skliaustą, kadangi norime viską daryti klasės viduje) spaudžiame dešinį pelės klavišą ir pasirenkame "Generate..." <span class="open-image"><img src="../assets/img/img.png" alt="Paveiksliukas rodantis du paveiksliukus, skirtas atidaryti paveiksliuką"><div><img src="../assets/img/java-lecture1/screenshot9.jpg" alt="Kodo foto"></div></span></li>
+                        <li>Toliau, renkamės "Constructor", kadangi kursimės konstruktorius. Vieną pilną, vieną tuščią. Taip derėtų pasidaryti visada, tačiau, kai reikia galima susikurti ir dalinai pilnų konstruktorių (nebūtina) <span class="open-image"><img src="../assets/img/img.png" alt="Paveiksliukas rodantis du paveiksliukus, skirtas atidaryti paveiksliuką"><div><img src="../assets/img/java-lecture1/screenshot10.jpg" alt="Kodo foto"></div></span></li>
+                        <li>Kad sukurti tuščią konstruktorių spaudžiame "Select none" <span class="open-image"><img src="../assets/img/img.png" alt="Paveiksliukas rodantis du paveiksliukus, skirtas atidaryti paveiksliuką"><div><img src="../assets/img/java-lecture1/screenshot11.jpg" alt="Kodo foto"></div></span></li>
+                        <li>Kad sukurti pilną konstruktorių vėl spaudžiame dešinį pelės klavišą, "Generate...", "Constructor" ir tada pažymime visus kintamuosius su CTRL klaviatūros mygtuku ir kairiu pelės klavišu. (arba tiesiog CTRL + A paspausti su klaviatūra) <span class="open-image"><img src="../assets/img/img.png" alt="Paveiksliukas rodantis du paveiksliukus, skirtas atidaryti paveiksliuką"><div><img src="../assets/img/java-lecture1/screenshot12.jpg" alt="Kodo foto"></div></span></li>
+                        <li>Spaudžiame "Ok" ir dabar kodas turėtų atrodyti štai taip: <span class="open-image"><img src="../assets/img/img.png" alt="Paveiksliukas rodantis du paveiksliukus, skirtas atidaryti paveiksliuką"><div><img src="../assets/img/java-lecture1/screenshot13.jpg" alt="Kodo foto"></div></span></li>
+                        
                     </ul>
 
                     <pre> <code class="language-html">&#x3C;p&#x3E; yra pastraipos žymė</code></pre>
